--- a/server/.env
+++ b/server/.env
@@ -1,21 +1,28 @@
 # ====================================
 # BACKEND - Variáveis de Ambiente
 # ====================================
+# IMPORTANTE: Copie este arquivo para .env e ajuste os valores
 
 # Application
 NODE_ENV=development
 PORT=3000
 
 # Database (PostgreSQL)
-DB_HOST=localhost
+# Use 'db' quando rodar com Docker Compose, 'localhost' quando rodar localmente
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=sua_senha_aqui
+DB_PASSWORD=1234
 DB_NAME=sge_db
 
 # JWT (Autenticação)
-JWT_SECRET=sua_chave_secreta_super_segura_aqui
+JWT_SECRET=minhachavesecreta123
 JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=minharefreshsecreta456
+JWT_REFRESH_EXPIRES_IN=7d
+
+# Bcrypt
+BCRYPT_ROUNDS=10
 
 # CORS (Frontend URL)
 FRONTEND_URL=http://localhost:5173
