--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "dependencies": {
         "axios": "^1.12.2",
         "date-fns": "^3.3.1",
+        "formik": "^2.4.6",
         "lucide-react": "^0.263.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.30.1",
-        "react-toastify": "^11.0.5"
+        "react-toastify": "^11.0.5",
+        "yup": "^1.7.1"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
