--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
 VITE_API_URL=http://localhost:3000/api
+MPESA_CLIENT_ID=9d771155-d4df-4fa9-af44-f1a4b4cc7a87
+MPESA_CLIENT_SECRET=8UOm5XcTXNCTBsrBvCRTUbWyERwTh74EWa5SMrDt
+MPESA_SERVER_URL=https://e2payments.explicador.co.mz
