--- a/server/.env.example
+++ b/server/.env.example
@@ -25,3 +25,9 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=seu_email@gmail.com
 SMTP_PASSWORD=sua_senha_app
+
+# M-Pesa (Pagamentos)
+# Obtenha suas credenciais em: https://e2payments.explicador.co.mz
+MPESA_CLIENT_ID=seu_client_id_aqui
+MPESA_CLIENT_SECRET=seu_client_secret_aqui
+MPESA_SERVER_URL=https://e2payments.explicador.co.mz
