--- a/server/.env
+++ b/server/.env
@@ -32,3 +32,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=seu_email@gmail.com
 SMTP_PASSWORD=sua_senha_app
+
+# M-Pesa (Pagamentos)
+MPESA_CLIENT_ID=9d771155-d4df-4fa9-af44-f1a4b4cc7a87
+MPESA_CLIENT_SECRET=8UOm5XcTXNCTBsrBvCRTUbWyERwTh74EWa5SMrDt
+MPESA_SERVER_URL=https://e2payments.explicador.co.mz
