--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
         "lint": "eslint src --ext .ts"
     },
     "dependencies": {
+        "axios": "^1.13.1",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "e2payments": "^1.0.0",
         "express": "^4.21.2",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
