--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^1.12.2",
         "date-fns": "^3.3.1",
+        "es-toolkit": "^1.41.0",
         "formik": "^2.4.6",
         "framer-motion": "^12.23.24",
         "lucide-react": "^0.263.1",
@@ -20,6 +21,7 @@
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.30.1",
         "react-toastify": "^11.0.5",
+        "recharts": "^3.3.0",
         "yup": "^1.7.1"
     },
     "devDependencies": {
